@@ -4,6 +4,9 @@
        and include the roles (for non-widgets) or specify it in widget_name_space.
        Maintaining backward compatibility was making the code awkward and weird,
        unfortunately.
+    Add 'build_field_rendering' to 'update_fields' processing
+    Change form 'html_attr' to use build_html_attr instead of default
+    Change interface of html_field_attributes to return attr (instead of in-place)
     Remove 'label_no_colon', make labels without colon the default.
        Add widget tag 'label_after'. Use "label_after => ': '" for old behavior
     Add widget tag 'label_tag'. Default 'label'.
